resources/docs/1.0/projects/vendor.md
# Vendor Management


- [First Section](#section-1)


![Vendor](/docs/images/project/vendor_management.jpg)

&nbsp;&nbsp;&nbsp;**No business in the world is self-sufficient and can’t be truly successful without help from others. That’s why businesses need to be in contact with vendors and manage them well.**

---

&nbsp;&nbsp;&nbsp; **Vendor management is all about establishing and maintaining fruitful relationships with your suppliers, consultants, freelancers, and other vendors. It includes such aspects as contract negotiation, risk management, work progress monitoring, etc. In other words, it aims to ensure you collaborate with vendors in a mutually beneficial way.**

---

&nbsp;All in all, vendor management is essential to stay efficient and productive. Thus, let’s explore what vendor management is and how to perform it well.

## Who Are Vendors?

A vendor is any person who helps a business to complete some tasks, procure some goods, render some services, etc. They are outsourced service providers whom you collaborate with to achieve your performance goals and strategic targets.

## How to Manage Vendors?

Vendor management includes six basic processes:

### 1. Vendor Selection

Before hiring a perfect vendor, you need to do your research. And the process of vendor selection is all about that. It aims to explore available options and understand whether the candidates meet your requirements. As part of this activity, your business will issue requests for proposals (RFPs). After the prospects reply to those requests, you will explore the provided information in depth and choose the best vendor from the list.

### 2. Contract Negotiation

At this stage, you will actively discuss such issues as pricing, deadlines, and overall work requirements with your vendors. Once the mutual agreement is attained, you will sign the contract and proceed to the following step.

### 3. Onboarding

Before starting the actual work, you need to provide your vendors with all the info they need to show high-quality results and stay in line with your organizational policies. Set forth your performance expectations and indicate how you will fulfill your own responsibilities as an employer. For instance, you can talk about your payment methods and rules and, if necessary, share with vendors your employee handbook that will spell out all the relevant performance rules to follow.

### 4. Work Progress Tracking

It’s vital to monitor vendors’ performance as regularly as possible. Consistent progress tracking will help you reduce quality risks, promote vendors’ accountability, and ensure your project estimates and budgets are respected. Therefore, be sure to track vendors’ working time, check how many tasks they manage to complete on a daily basis, and use tools like actiTIME to make that happen.

### 5. Risk Management

Additionally, you should screen your vendors’ legal compliance and monitor whether they’re experiencing any data security issues and other problems that can harm their reputation or make it hard for them to provide services effectively and on schedule.

### 6. Payment

If your collaboration with a vendor goes well and no contract infractions take place, you need to reward them with a timely payment as per the agreed terms.

## Main Benefits of Effective Vendor Management

- **Efficient performance**
- **High-quality collaboration results**
- **Effective risk mitigation**
- **Lower business costs**
- **Trustful vendor relationships**
- **Superior productivity**

## Use Smart Software to Streamline Vendor Management

To carry out all the vendor management processes in a proper way, you may use some specialized management tools, either custom-built software or a ready-made product already available on the market.

A smart vendor management system (VMS) will make it easy to search for vendors, hire them, and collaborate with them productively. It will enable you to keep a precise record of all the transactions between you and your vendors. Hence, it will propel your business towards growth and increase process efficiency.

If you are hesitant, check out some benefits of using vendor management systems:

### VMS Benefits

### 1. Transparency

A VMS stores all the vendor-related data in a centralized fashion and provides your authorized staff members with easy access to it. Besides, some solutions can help you monitor the use of resources, allowing you to see how much money is being spent on vendor management and how much time you invest in the process.

### 2. Reduced Administration Costs

Vendor management and allied systems help in reducing operational costs by acting as one-stop shops. All possible information regarding vendor management and vendors can be grouped and stored inside a VMS in a well-structured way, which makes it easier to collaborate with vendors and save time on the recruitment and onboarding processes.

Besides, when all the important business and vendor-related information is kept in a centralized manner, you gain better control over the situation. Thereby, a VMS lets you analyze your data and locate problems fast. It informs you on how to make your vendor management process more cost-efficient if necessary.

### 3. Better Communication

A VMS can help you connect with all your vendors seamlessly. It provides a robust and centralized communication channel so that your business interacts with vendors as quickly and effectively as possible.

### 4. Lower Reputation Risks

Brand identity is of utmost importance for any business. You wouldn’t want to undermine your credibility due to someone else’s actions, right? This is where a VMS strikes. Keeping a record of all the info about vendors, it allows for an effortless evaluation of risks.

Before finalizing a vendor, you can screen their background through a VMS. This way, you prevent substandard vendors from entering your company’s operations and, thus, protect your brand’s identity.

### 5. Superior Performance and Results

As you can see, a good VMS lets you keep every aspect of the vendor management process in check, from the initial search for suitable candidates to the actual work on projects. This way, it helps you find the best vendors and establish productive relationships with them, which is key to better performance and high-quality work results.








